# eomi_nrf24_sender

./: .gitignore  Cargo.toml  README.md  memory.x  reader.rs  sender.rs
.cargo/: config.toml
