[package]
edition = "2021"
name = "f4-remote"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = ["chrono", "defmt", "exti", "memory-x", "stm32f411cc", "time-driver-tim4", "unstable-pac"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
# embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-usb = { version = "0.4.0", features = ["defmt" ] }
# embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
# embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
# embedded-storage = "0.3.1"
# micromath = "2.0.0"
# usbd-hid = "0.8.1"
# static_cell = "2"
chrono = { version = "^0.4", default-features = false}
# nrf24-rs = "0.2.0"
embassy-time = "0.4.0"
# embedded-nrf24l01-async = "0.3.1"
# embedded-ads111x = { version = "0.1.2", features = ["async"] }

[profile.release]
debug = 2
